src/syntax/tests/data/negative/expr-1.hsh
@[
	hai: 1,
	b: [ 5 * ], # missing operand here
	c: 3
]

function b()
	std.print(hai)
end
